# master-guard

./: README.md  index.html  pyproject.toml
src/master_guard/: cli.py  dashboard.py  models.py  monitor.py  scanner.py  storage.py
