[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "master-guard"
version = "0.1.0"
description = "Simple file integrity monitoring tool"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "master-guard contributors" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: POSIX :: Linux",
  "Topic :: Security"
]

[project.scripts]
master-guard = "master_guard.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
